--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <h1 class="mb-0">Palak
             <span class="text-primary">Gupta</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5">Student at Thapar University,Patiala
+            <a href="palakgupta0604@gmail.com">palakgupta0604@gmail.com</a>
           </div>
           <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <ul class="list-inline list-social-icons mb-0">
